--- a/style.css
+++ b/style.css
@@ -31,10 +31,22 @@ body{
 	background-attachment: fixed;
 }
 
+.title{
+	display: none;
+	font-family: 'Amatic SC', cursive;
+
+}
+
+.clouds{
+	margin-bottom: 0px;
+}
+
+
+
 /*styling for all page titles*/
 .page-title{
 	color: #666;
-	font-family: 'Amatic SC', cursive;;
+	font-family: 'Amatic SC', cursive;
 	font-weight: 100;
 	font-size: 70px;
 	text-align: center;
@@ -153,7 +165,8 @@ body{
 	background-image: url("me-small.jpg");
 	background-repeat: no-repeat;
 	background-attachment: fixed;
-	background-size: 100%;
+	background-size: cover;
+
 }
 
 .about-title{
@@ -166,14 +179,14 @@ body{
 	font-style: bold;
 	display: inline-block;
 	text-align: right;
-	width: 500px;
-	margin-top: 50px;
-	margin-bottom: 50px;
-	margin-left: 745px;
+	width: 35%;
+	margin-top: 6%;
+	margin-bottom: 6%;
+	margin-left: 55%;
 	color: #666;
 	background-color: #f4f4f4;
 	opacity: 0.6;
-	padding: 15px 40px;
+	padding: 1% 1.5%;
 }
 
 .about-para p{
@@ -220,47 +233,39 @@ body{
 	height: 700px;
 	background-attachment: fixed;
 	padding-top: 20px;
-	padding-bottom: 150px;
-	margin-bottom: -100px;
+	padding-bottom: 300px;
+
 }
 
 /*container for image grid*/
 .container {
 	display: flex;
-	flex-wrap: wrap;
+	display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+   display: -webkit-flex;
+  -webkit-flex-flow: row wrap;
+  justify-content: center;
+
 }
 
 .container img {
-	  max-height: 170px;
-	  flex:1;
-	  filter:grayscale(1);
+	max-height: 280px;
+	filter:grayscale(1);
+	flex: 1;
+
 }	
 
 .container img:hover {
     filter: grayscale(0);
 }
 
-@media screen and (max-width: 800px){
-	.container img {
-	  max-height: 170px;
-	  flex:1;
-	  filter:grayscale(1);
-	}	
-}
-
-@media screen and (max-width: 700px){
-	.container img {
-	  max-height: 70px;
-	  flex:1;
-	  filter:grayscale(1);
-	}	
-}
-
 .contact{
 	background-image: url("contact.jpg");
 	background-attachment: fixed;
-	background-size: 100%;
-	height: 680px;
+	background-repeat: no-repeat;
+	background-size: cover;
+	height: 100%;
 	bottom: 0;
 	margin-bottom: 0;
 }
@@ -323,11 +328,11 @@ body{
 /*	margin: 0 auto;
 */}
 
-.social-text{
+/*.social-text{
 	margin-top: 25px;
 	font-size: 20px;
 }
-
+*/
 
 /*the cv thing wont move????????*/
 .cv {
@@ -350,6 +355,161 @@ body{
 	background-color: #f4f4f4;
 	color: #666;
 }
+
+
+@media screen and (max-width: 1440px){
+
+	.container img {
+		max-height: 200px;
+		flex:0;
+		filter:grayscale(1);
+		}	
+
+	.about-grid{
+		margin-bottom: -200px;
+
+	}
+}
+
+@media screen and (max-width: 1100px){
+
+	.landing-page{
+		max-height: 550px;
+		background-image: url("small-back.jpg");
+		background-attachment: scroll; 
+
+
+	}
+
+	.title{
+		color: #f4f4f4;
+		margin: 0 auto;
+		display: block;
+		padding-top: 170px;
+		text-align: center;
+		font-size: 70pt;
+		padding-bottom: 0px;
+		margin-bottom: 0px;
+	}
+
+		
+	
+	.clouds{
+		margin-top: -190px;
+		background-attachment: scroll;
+
+	}
+
+	.about{
+		background-attachment: scroll;
+	}	
+
+	.about-para {
+		margin: 10% auto;
+		display: flex;
+		width: 50%;
+		text-align: center;
+	}
+
+	.about-title{
+		color: #666;
+	}
+
+	.container img {
+		max-height: 205px;
+		flex:0;
+	}	
+
+}
+
+@media screen and (max-width: 1040px){
+
+		.landing-page{
+		max-height: 500px;
+		background-image: url("small-back.jpg");
+		background-attachment: scroll; 
+
+	}
+
+			.clouds{
+		margin-top: -230px;
+		background-attachment: scroll;
+
+	}
+
+	.container img {
+		max-height: 170px;
+		flex:0;
+		}	
+
+		.about-grid{
+		margin-bottom: -300px;
+
+	}
+}
+
+@media screen and (max-width: 870px){
+
+		.landing-page{
+		max-height: 380px;
+		background-image: url("small-back.jpg");
+		background-attachment: scroll; 
+	}
+
+		.clouds{
+		margin-top: -240px;
+		background-attachment: scroll;
+		padding-bottom: 350px;
+	}
+
+
+
+
+	.container img {
+		max-height: 100px;
+		flex:0;
+		}	
+
+	.about-grid{
+		padding-bottom: 0px;
+		margin-bottom: -300px;
+	}
+
+	.contact-text{
+	font-family: "Lato", sans-serif;
+	font-size: 24px;
+	color: #f4f4f4;
+	font-style: "bold";
+	text-align: center;
+	margin: 0 auto;
+	padding-top: 100px;
+	}
+}
+
+@media screen and (max-width: 750px){
+		.clouds{
+		margin-top: -180px;
+		background-attachment: scroll;
+
+	}
+}
+
+@media screen and (max-width: 604px){
+		.clouds{
+		margin-top: -160px;
+		background-attachment: scroll;
+
+
+	}
+
+		.title{
+		padding-bottom: 30px;
+
+	}
+}
+
+
+
 
 
 
